feat: add killswitch feature to prevent traffic leaks outside VPN
- Add killswitch module using iptables custom chain QBOUNCER-KS
- Restrict specified user's traffic to VPN interface only
- Allow localhost for Web UI access
- Automatic cleanup on shutdown, periodic verification during monitoring
- New config options: [killswitch] enabled, user
- Add CAP_NET_ADMIN capability to systemd service
- Installer options: --killswitch, --killswitch-user, --release

--- a/config/qbouncer.toml.example
+++ b/config/qbouncer.toml.example
@@ -64,3 +64,14 @@ failure_backoff_base = 5
 
 # Maximum delay for exponential backoff in seconds
 failure_backoff_max = 300
+
+[killswitch]
+# Enable iptables killswitch to prevent traffic leaks outside VPN
+# When enabled, the specified user can only route traffic through
+# the VPN interface (and localhost for Web UI access)
+# Requires CAP_NET_ADMIN capability (granted by systemd service)
+enabled = false
+
+# User running qBittorrent (traffic will be restricted for this user)
+# This should match the user that qBittorrent runs as
+user = "qbittorrent"
