--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,13 +4,13 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "qbouncer"
-version = "1.0.0"
+version = "1.1.0"
 description = "WireGuard NAT-PMP Port Bouncer for qBittorrent"
 readme = "README.md"
 requires-python = ">=3.9"
 license = {text = "MIT"}
 authors = [
-    {name = "vegardx"}
+    {name = "Vegard Hansen"}
 ]
 dependencies = [
     "requests>=2.28.0",
